--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,107 @@
 body {
     margin: 0px;
-    font-family: 'Roboto';
+    font-family: 'Poppins';
+    font-size: 12pt;
     display: flex;
     flex-direction: column;
+    background-color: #F1EFEF;
+    color: #534444;
 }
+
+/*Navigation Bar*/
+.navbar {
+    display: fixed;
+    overflow: hidden;
+    background-color: #F1EFEF;
+    width: 100%;
+    position: fixed;
+}
+
+/*Content*/
+.content {
+    padding-left: 14%;
+    padding-right: 14%;
+    padding-top: 60px;
+}
+
+h1, h2, h3 {
+    font-family: 'Playfair Display';
+    line-height:0.8;
+}
+
+/* all links */
+a {
+    text-decoration: none;
+    color: #534444;
+}
+
+/* Links inside the navbar */
+.navbar a {
+    float: left;
+    font-size: 12pt;
+    color: #534444;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    
+}
+
+.nav-right {
+    float: right;
+}
+
+/* The dropdown container 
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+/* Dropdown button 
+.dropdown .dropbtn {
+    font-size: 16pt;
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit; /* Important for vertical align on mobile phones 
+    margin: 0; /* Important for vertical align on mobile phones 
+}
+
+/* Add a red background color to navbar links on hover
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: rgb(0, 0, 0);
+}
+
+
+/* Dropdown content (hidden by default) *
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown *
+.dropdown-content a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+/* Add a grey background color to dropdown links on hover *
+.dropdown-content a:hover {
+    background-color: #ddd;
+}
+
+/* Show the dropdown menu on hover /
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+*/
