--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,15 @@ h1, h2, h3 {
     line-height:0.8;
 }
 
+h1 {
+    font-size: 36pt;
+}
+
+h3 {
+
+    font-size: 16pt;
+}
+
 /* all links */
 a {
     text-decoration: none;
@@ -48,6 +57,53 @@ a {
 
 .nav-right {
     float: right;
+}
+
+
+.row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 15px;
+    justify-content: center;
+}
+
+/* Create four equal columns that sits next to each other */
+.column {
+    flex: 25%;
+    max-width: 26%;
+    padding: 0 12px;
+}
+
+.skill-row {
+    display: flex;
+    flex-wrap: wrap;
+    padding: 0 15px;
+    justify-content: center;
+}
+
+/* Create four equal columns that sits next to each other */
+.skill-column {
+    flex: 25%;
+    max-width: 100%;
+    padding: 0 12px;
+}
+
+
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+    .column {
+    flex: 50%;
+    max-width: 50%;
+    }
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 1100px) {
+    .skill-column {
+    flex: 100%;
+    max-width: 100%;
+    }
 }
 
 /* The dropdown container 
