Added borders to h3 headers

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -33,9 +33,19 @@ h1 {
     font-size: 36pt;
 }
 
-h3 {
+h3 span {
+    background-color: #898080;
+    border-radius: 20px;
+    color: #F1EFEF;
+    padding: 8px;
+    padding-left: 18px;
+    padding-right: 18px;
+    text-decoration: none;
+    font-weight: lighter;
+}
 
-    font-size: 16pt;
+h2 {
+    font-size: 20pt;
 }
 
 /* all links */
