--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,7 +21,7 @@ body {
 .content {
     padding-left: 14%;
     padding-right: 14%;
-    padding-top: 60px;
+    padding-top: 220px;
 }
 
 h1, h2, h3 {
@@ -30,11 +30,24 @@ h1, h2, h3 {
 }
 
 h1 {
+    margin-top: 15px;
     font-size: 36pt;
 }
 
+.light {
+    font-weight:400;
+    padding: 0;
+    margin: 0;
+    padding-right: 8px;
+}
+
+h2 {
+    font-size: 20pt;
+}
+
+/* Background bubble for subheaders */
 h3 span {
-    background-color: #898080;
+    background-color: #716a6a;
     border-radius: 20px;
     color: #F1EFEF;
     padding: 8px;
@@ -44,10 +57,18 @@ h3 span {
     font-weight: lighter;
 }
 
-h2 {
-    font-size: 20pt;
+/* Image text side by side */
+.container {
+    display: flex;
+    align-items: center;
 }
 
+/* home section */
+.home {
+    padding-bottom: 150px;
+    padding-left: 40px;
+}
+   
 /* all links */
 a {
     text-decoration: none;
@@ -68,7 +89,6 @@ a {
 .nav-right {
     float: right;
 }
-
 
 .row {
     display: flex;
@@ -115,6 +135,14 @@ a {
     max-width: 100%;
     }
 }
+
+
+/* SECTION PADDING */
+.contact {
+    margin-bottom: 50px;
+}
+
+
 
 /* The dropdown container 
 .dropdown {
