--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,7 @@ body {
     background-color: #F1EFEF;
     width: 100%;
     position: fixed;
+    z-index:1;
 }
 
 /*Content*/
@@ -38,7 +39,7 @@ h1 {
 
 .navbar #name {
     font-size: larger;
-    font-weight: bold;
+    font-family: 'Playfair Display';
 }
 
 .light {
