--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,6 @@ body {
 
 /*Navigation Bar*/
 .navbar {
-    font-family: 'Playfair Display';
     display: fixed;
     overflow: hidden;
     background-color: #F1EFEF;
@@ -20,7 +19,30 @@ body {
     z-index:1;
 }
 
-/*Content*/
+/* Links inside the navbar */
+.nav-right a {
+    font-size: 14pt;
+    color: #534444;
+    text-align: center;
+    padding: 40px 18px;
+    text-decoration: none;
+    display: inline-block;
+    list-style-type: none;
+    font-weight: 400;
+}
+
+.nav-left {
+    float:left;
+    padding-top: 35px;
+    padding-left: 50px;
+}
+
+.nav-right {
+    float:right;
+    padding-right: 36px;
+}
+
+/*Page Contents*/
 .content {
     padding-left: 20%;
     padding-right: 20%;
@@ -29,7 +51,7 @@ body {
 
 
 /* SECTION PADDING */
-.contact {
+#contact {
     margin-bottom: 50px;
 }
 
@@ -40,6 +62,7 @@ body {
 .intro-text p {
     padding-left: 20px;
 }
+
 
 /* home section */
 
@@ -121,11 +144,11 @@ p span {
     padding-bottom: 5px;
 }
 
-/* underlines current navbar page 
+/* underlines current navbar page */
 #curr-page {
     border-bottom: 1px solid #534444;
 }
-*/
+
 
 /* Image text side by side */
 .container {
@@ -138,28 +161,6 @@ p span {
 a {
     text-decoration: none;
     color: #534444;
-}
-
-/* Links inside the navbar */
-.navbar a {
-    font-size: 16pt;
-    color: #534444;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    display: inline-block;
-    list-style-type: none;
-    font-weight: 400;
-}
-
-.nav-left {
-    float:left;
-    padding: 10px;
-    padding-left: 20px;
-}
-
-.nav-right {
-    float:right;
 }
 
 .row {
@@ -237,10 +238,13 @@ figure img:hover {
     display: flex;
     justify-content: center;
     align-items: center;
-    gap: 10px;
     margin-left: -20%;
 }
 
+/* light text */
+#light {
+    color: #7c7474;
+}
 
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
