--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,6 +56,7 @@ body {
 }
 
 .intro-text {
+    flex: 1;
     padding-left: 50px;
 }
 
@@ -238,6 +239,7 @@ figure img:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+    gap: 10px;
     margin-left: -20%;
 }
 
@@ -258,73 +260,24 @@ figure img:hover {
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 1100px) {
     .skill-column {
-    flex: 100%;
-    max-width: 100%;
+        flex: 100%;
+        max-width: 100%;
     }
     .proj-column {
         flex: 100%;
     }
-}
-
-@media screen and (max-width: 1100px) {
     .home-img {
-    padding-left: 40px;
+        padding-left: 40px;
+        }
+    .container.about {
+        flex-direction: column;
+    }
+    .home {
+        padding-top: 140px;
+        flex-direction: column;
     }
 }
 
-
-/* The dropdown container 
-.dropdown {
-    float: left;
-    overflow: hidden;
+@media screen and (max-width: 1100px) {
+    
 }
-
-/* Dropdown button 
-.dropdown .dropbtn {
-    font-size: 16pt;
-    border: none;
-    outline: none;
-    color: white;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit; /* Important for vertical align on mobile phones 
-    margin: 0; /* Important for vertical align on mobile phones 
-}
-
-/* Add a red background color to navbar links on hover
-.navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: rgb(0, 0, 0);
-}
-
-
-/* Dropdown content (hidden by default) *
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-/* Links inside the dropdown *
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-/* Add a grey background color to dropdown links on hover *
-.dropdown-content a:hover {
-    background-color: #ddd;
-}
-
-/* Show the dropdown menu on hover /
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-*/
